# tvm-sdk

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-tvm.yml
docks/: CPP_TO_PYTHON_CALLS.md
examples/: CMakeLists.txt  README_PYTHON_BRIDGE.md  numpy_test.cpp  simple_tvm_import.cpp  tvm_metaschedule.cpp  tvm_test.cpp  tvm_version_example.cpp
include/: python_hook.h
include/bridge/: python_bridge.h
include/ffi/: numpy_ffi.h  torch_ffi.h  tvm_ffi.h
python/numpy_ext/: __init__.py  numpy_samples.py
python/torch_ext/: __init__.py  resnet18.py
python/tvm/: tvm_samples.py
python/tvm_ext/: __init__.py  config.py  ffi_entry.py  metaschedule.py  resnet_schedule.py  tvm_samples.py  version.py
script/: download-tvm-release.ps1  download-tvm-release.sh  fix-docker-credentials.sh  setup-docker.ps1  setup-docker.sh
src/: python_hook.cpp
src/bridge/: python_bridge.cpp
src/ffi/: numpy_ffi.cpp  torch_ffi.cpp  tvm_ffi.cpp
test/: CMakeLists.txt  test_numpy_ffi.cpp  test_torch_ffi.cpp  test_tvm_ffi.cpp  test_tvm_schedule.cpp
test/tvm/: tvm-test.py
